welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: illegal start of simple pattern
  var compteur niveau = 0
                      ^island:3: error: '=' expected but ';' found.
  for (i<-0 to num.length-2){
^